--- a/lab.ipynb
+++ b/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "16c09ed2-ba7b-467c-b3d3-a9f34c0d78c3",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,45 @@
     "#Flights 1\n",
     "import pandas as pd\n",
     "flights = pd.read_csv(\"flights.csv\")\n",
-    "cleaned_flights[\"dep_delay\"] = pd.to_numeric(cleaned_flights[\"dep_delay\"], errors=\"coerce\")\n",
-    "cleaned_flights[\"arr_delay\"] = pd.to_numeric(cleaned_flights[\"arr_delay\"], errors=\"coerce\")\n",
+    "\n",
+    "cleaned_flights = flights.dropna(subset=[\"dep_delay\", \"arr_delay\"]) \n",
+    "cleaned_flights = cleaned_flights[(cleaned_flights[\"dep_delay\"] != \"NA\") & (cleaned_flights[\"arr_delay\"] != \"NA\")]\n",
     "cleaned_flights = cleaned_flights.reset_index(drop=True)\n",
     "\n",
     "\n",
-    "cleaned_flights.to_csv(\"flights_cleaned.csv\", index=False)"
+    "cleaned_flights.to_csv(\"flights_cleaned.csv\", index=False)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "37fa6694-b64f-4cd3-aa86-86c9fe4469a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are no NA or missing values in dep_delay or arr_delay columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check for NA values in dep_delay and arr_delay\n",
+    "import pandas as pd\n",
+    "\n",
+    "flights = pd.read_csv(\"flights_cleaned.csv\")\n",
+    "\n",
+    "has_na = ((flights[\"dep_delay\"] == \"NA\") | (flights[\"arr_delay\"] == \"NA\")).any()\n",
+    "\n",
+    "has_missing = (flights[\"dep_delay\"].isna() | flights[\"arr_delay\"].isna()).any()\n",
+    "\n",
+    "if has_na or has_missing:\n",
+    "    print(\"There are NA or missing values in dep_delay or arr_delay columns.\")\n",
+    "else:\n",
+    "    print(\"There are no NA or missing values in dep_delay or arr_delay columns.\")"
    ]
   },
   {
